--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@mdi/js": "^7.4.47",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "formik": "^2.4.5",
+    "install": "^0.13.0",
+    "npm": "^10.5.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.7.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
