--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@ant-design/icons-react-native": "^2.3.2",
+    "@apollo/client": "^3.9.11",
     "@mdi/js": "^7.4.47",
+    "@nhost/react": "^3.4.1",
+    "@nhost/react-apollo": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@rneui/themed": "^4.0.0-rc.8",
     "formik": "^2.4.5",
+    "graphql": "^16.8.1",
     "install": "^0.13.0",
     "npm": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-floating-label-input": "^1.4.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
@@ -31,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.24.1",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.73.21",
