--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "npm": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-camera": "^4.2.1",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-vision-camera": "^4.0.3",
+    "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
