--- a/ios/Ludopocket/Info.plist
+++ b/ios/Ludopocket/Info.plist
@@ -4,6 +4,8 @@
 	<dict>
 		<key>NSCameraUsageDescription</key>
 		<string>$(PRODUCT_NAME) needs access to your Camera.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Need access to photo library to select images</string>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>en</string>
 		<key>CFBundleDisplayName</key>
