--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-native": "0.73.4",
     "react-native-camera": "^4.2.1",
     "react-native-floating-label-input": "^1.4.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-crop-picker": "^0.41.0",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
